# md-minutes-generator

./: .gitignore  CHANGELOG  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: release.yml  test_openssl.yaml
locales/: en.json  jp.json  sc.json
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_process.rs  lib.rs  main.rs
src-tauri/src/command/: file.rs  mod.rs  path.rs  settings.rs
src-tauri/src/tool/: excel.rs
src/component/: app.rs  dialog.rs  drawer.rs  header.rs  input_section.rs  logo.rs  message_bar.rs  mod.rs  toast.rs  usage_guide.rs
src/handler/: drag_drop.rs  generate.rs  mod.rs  path.rs  select_input.rs  select_output.rs  settings.rs
