[package]
name = "md-minutes-generator-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thaw = { version = "0.4.0-rc", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace]
members = ["src-tauri"]
