[package]
name = "md-minutes-generator-ui"
version = "0.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
icondata = { version = "0.5", default-features = false, features = ["css-gg", "github-octicons"] }
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos_i18n = { version = "0.5", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thaw = { version = "0.4", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "jp", "sc"]

[workspace]
members = ["src-tauri"]
